--- a/src/DocSite/project.json
+++ b/src/DocSite/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
@@ -19,7 +19,9 @@
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0"
-    }
+    },
+    "System.Xml.XmlDocument": "4.0.1",
+    "System.Xml.XmlSerializer": "4.0.11"
   },
 
   "frameworks": {
