--- a/src/DocSite/project.json
+++ b/src/DocSite/project.json
@@ -2,7 +2,7 @@
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true,
-    "embed": "**/*.html",
+    "embed": "Templates/**/*",
     "compile": "**/*.cs"
   },
   "packOptions": {
