Various tweaks to get this thing working right. Rendered first docsite - still needs work.

--- a/src/DocSite/project.json
+++ b/src/DocSite/project.json
@@ -3,7 +3,8 @@
   "buildOptions": {
     "emitEntryPoint": true,
     "embed": "Templates/**/*",
-    "compile": "**/*.cs"
+    "compile": "**/*.cs",
+    "xmlDoc": true 
   },
   "packOptions": {
     "projectUrl": "https://github.com/PaulTrampert/DocSite",
