--- a/src/DocSite/project.json
+++ b/src/DocSite/project.json
@@ -19,10 +19,13 @@
     "summary": "Builds documentation pages out of C# documentation comments."
   },
   "dependencies": {
+    "Microsoft.Extensions.Logging": "1.0.0",
+    "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0"
     },
+    "Newtonsoft.Json": "9.0.1",
     "System.Xml.XmlDocument": "4.0.1",
     "System.Xml.XmlSerializer": "4.0.11"
   },
