--- a/src/DocSite/Properties/launchSettings.json
+++ b/src/DocSite/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DocSite": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\Projects\\DocSite\\src\\DocSite\\bin\\Debug\\netcoreapp1.0\\DocSite.xml C:\\Projects\\DocSite.Documentation"
+      "commandLineArgs": "-help"
     }
   }
 }
