--- a/src/DocSite/project.json
+++ b/src/DocSite/project.json
@@ -27,12 +27,15 @@
     },
     "Newtonsoft.Json": "9.0.1",
     "System.Xml.XmlDocument": "4.0.1",
-    "System.Xml.XmlSerializer": "4.0.11"
+    "System.Xml.XmlSerializer": "4.0.11",
+    "PTrampert.AppArgs": "1.0.1"
   },
-
   "frameworks": {
     "netcoreapp1.0": {
       "imports": "dnxcore50"
     }
+  },
+  "tools": {
+    "dotnet-version": "1.1.0" 
   }
 }
