--- a/src/DocSite/project.json
+++ b/src/DocSite/project.json
@@ -1,5 +1,6 @@
 {
   "version": "1.0.0-*",
+  "name": "dotnet-docsite", 
   "buildOptions": {
     "emitEntryPoint": true,
     "embed": "Templates/**/*",
