Improved logging and added dotnet-docsite.cmd so it can be used as a dotnet tool.

--- a/src/DocSite/Properties/launchSettings.json
+++ b/src/DocSite/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DocSite": {
       "commandName": "Project",
-      "commandLineArgs": "-i C:\\Projects\\DocSite\\src\\DocSite\\bin\\Debug\\netcoreapp1.0\\dotnet-docsite.xml -o C:\\Projects\\docsite-doc"
+      "commandLineArgs": "-i C:\\Projects\\DocSite\\src\\DocSite\\bin\\Debug\\netcoreapp1.0\\DocSite.xml -o C:\\Projects\\docsite-doc"
     }
   }
 }
