--- a/src/DocSite/project.json
+++ b/src/DocSite/project.json
@@ -4,6 +4,7 @@
     "emitEntryPoint": true,
     "embed": "Templates/**/*",
     "compile": "**/*.cs",
+    "copyToOutput": "dotnet-docsite.*",
     "xmlDoc": true 
   },
   "packOptions": {
