Test project needs to reference DocSite

--- a/DocSite.Test/DocSite.Test.csproj
+++ b/DocSite.Test/DocSite.Test.csproj
@@ -25,6 +25,9 @@
       <Version>2.2.0-beta4-build1194</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DocSite\DocSite.csproj" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <DebugType>none</DebugType>
   </PropertyGroup>
